--- a/adressBook.html
+++ b/adressBook.html
@@ -16,13 +16,15 @@
           <h2>Add a contact:</h2>
           <form id="new-place">
             <div class="form-group">
-              <label for="new-location">First name</label>
+              <label for="new-spot">The place: </label>
+              <input type="text" class="form-control" id="new-spot">
+            </div>
+
+            <div class="form-group">
+              <label for="new-location">Relative geographic location: </label>
               <input type="text" class="form-control" id="new-location">
             </div>
-            <div class="form-group">
-              <label for="new-last-name">Last name</label>
-              <input type="text" class="form-control" id="new-last-name">
-            </div>
+
 
             <div id="new-addresses">
               <div class="new-address">
@@ -56,8 +58,8 @@
           <div id="show-contact">
             <h2></h2>
 
-            <p>First name: <span class="location"></span></p>
-            <p>Last name: <span class="last-name"></span></p>
+            <p>The place: <span class="spot"></span></p>
+            <p>The location: <span class="location"></span></p>
             <p>Addresses:</p>
             <ul id="addresses">
 
