--- a/adressBook.html
+++ b/adressBook.html
@@ -13,7 +13,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <h2>Add a contact:</h2>
+          <h2>Add a place:</h2>
           <form id="new-place">
             <div class="form-group">
               <label for="new-spot">The place: </label>
@@ -49,13 +49,13 @@
           </form>
 
           <h2>Contacts:</h2>
-          <ul id="contacts">
+          <ul id="places">
 
           </ul>
         </div>
 
         <div class="col-md-6">
-          <div id="show-contact">
+          <div id="show-place">
             <h2></h2>
 
             <p>The place: <span class="spot"></span></p>
