--- a/adressBook.html
+++ b/adressBook.html
@@ -27,7 +27,7 @@
 
 
             <div id="new-addresses">
-              <div class="new-address">
+        <!--      <div class="new-address">
                 <div class="form-group">
                   <label for="new-street">Street</label>
                   <input type="text" class="form-control new-street">
@@ -40,7 +40,7 @@
                   <label for="new-state">State</label>
                   <input type="text" class="form-control new-state">
                 </div>
-              </div>
+              </div> -->
             </div>
 
             <span class="btn btn-primary" id="add-address">Another address</span>
