gonna add landmarks

--- a/adressBook.html
+++ b/adressBook.html
@@ -25,6 +25,10 @@
               <input type="text" class="form-control" id="new-location">
             </div>
 
+            <div id="new-landmark">
+            </div>
+
+            <span class="btn btn-primary" id="add-landmark">Add landmark</span>
 
             <div id="new-addresses">
         <!--      <div class="new-address">
@@ -62,6 +66,10 @@
             <p>The location: <span class="location"></span></p>
             <p>Addresses:</p>
             <ul id="addresses">
+
+            </ul>
+            <p>Landmarks:</p>
+            <ul id="landmarks">
 
             </ul>
           </div>
