got rid of address nonsense

--- a/adressBook.html
+++ b/adressBook.html
@@ -30,8 +30,8 @@
 
             <span class="btn btn-primary" id="add-landmark">Add landmark</span>
 
-            <div id="new-addresses">
-        <!--      <div class="new-address">
+            <!--    <div id="new-addresses">
+            <div class="new-address">
                 <div class="form-group">
                   <label for="new-street">Street</label>
                   <input type="text" class="form-control new-street">
@@ -44,8 +44,8 @@
                   <label for="new-state">State</label>
                   <input type="text" class="form-control new-state">
                 </div>
-              </div> -->
-            </div>
+              </div>
+            </div>-->
 
             <span class="btn btn-primary" id="add-address">Another address</span>
 
@@ -64,10 +64,10 @@
 
             <p>The place: <span class="spot"></span></p>
             <p>The location: <span class="location"></span></p>
-            <p>Addresses:</p>
+            <!--<p>Addresses:</p>
             <ul id="addresses">
 
-            </ul>
+            </ul> -->
             <p>Landmarks:</p>
             <ul id="landmarks">
 
