--- a/places.html
+++ b/places.html
@@ -28,13 +28,21 @@
             <div id="new-landmark">
             </div>
 
+            <div id="new-time-visited">
+            </div>
+
+
             <span class="btn btn-primary" id="add-landmark">Add landmark</span>
-            <button type="submit" class="btn">Add</button>
+            <br>
+            <br>
+            <span class="btn btn-primary" id="add-time-visited">Add season you visited</span>
+            <br>
+            <br>
+            <button type="submit" class="btn">Add Place</button>
           </form>
 
-          <h2>Contacts:</h2>
+          <h2>Places:</h2>
           <ul id="places">
-
           </ul>
         </div>
 
@@ -46,6 +54,11 @@
             <p>The location: <span class="location"></span></p>
             <p>Landmarks:</p>
             <ul id="landmarks">
+
+            </ul>
+            <p>When visited:</p>
+
+            <ul id="when">
 
             </ul>
           </div>
