--- a/places.html
+++ b/places.html
@@ -28,14 +28,14 @@
             <div id="new-landmark">
             </div>
 
-            <div id="new-time-visited">
+            <div id="new-landmark2">
             </div>
 
 
             <span class="btn btn-primary" id="add-landmark">Add landmark</span>
             <br>
             <br>
-            <span class="btn btn-primary" id="add-time-visited">Add season you visited</span>
+            <span class="btn btn-primary" id="add-landmark2">Add season you visited</span>
             <br>
             <br>
             <button type="submit" class="btn">Add Place</button>
@@ -58,7 +58,7 @@
             </ul>
             <p>When visited:</p>
 
-            <ul id="when">
+            <ul id="landmark2s">
 
             </ul>
           </div>
